--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -7,6 +7,6 @@
 @import 'component/footer';
 
 //page
-@import 'topo';
 @import 'page/homepage';
+@import 'page/single_faq';
 @import 'page/reponsive';
