--- a/app/scss/page/_homepage.scss
+++ b/app/scss/page/_homepage.scss
@@ -7,6 +7,11 @@
 	margin-bottom: 20px;
 }
 
+.section-desc {
+	margin-bottom: 40px;
+	font-size: 17px;
+}
+
 .section-hello {
 	padding: 80px 0;
 
@@ -66,6 +71,8 @@
 
 	.inner {
 		font-size: 15px;
+		background: transparent;
+		padding: 0;
 
 		&-title {
 			font-size: 17px;
@@ -173,5 +180,217 @@
 		background: url(/images/ship-bg2.png) no-repeat;
 		width: 488px;
 		height: 440px;
+	}
+}
+
+.inner {
+	&-title {
+		font-weight: 700;
+		color: #000;
+		margin-bottom: 15px;
+		font-size: 20px;
+		text-align: center;
+	}
+
+	&-desc {
+		font-size: 17px;
+		margin-bottom: 0;
+		text-align: center;
+	}
+
+	&-icon {
+		width: 150px;
+		height: 150px;
+		display: flex;
+		align-items: center;
+		justify-content: center;
+		margin: 0 auto 20px auto;
+	}
+
+	&-bg {
+		background: url(/images/bg-inner.png) no-repeat;
+		background-size: cover;
+	}
+
+	&-img {
+		width: 100%;
+		aspect-ratio: 360/265;
+		border-radius: 15px;
+		overflow: hidden;
+		margin-bottom: 20px;
+
+		img {
+			object-fit: cover;
+			object-position: 50% 50%;
+			-o-object-position: 50% 50%;
+			width: 100%;
+			height: 100%;
+		}
+	}
+}
+
+.section-inherit {
+	padding-bottom: 80px;
+
+	.inner {
+		background: #F2E9D7;
+		border-radius: 16px;
+		padding: 30px 20px;
+	}
+}
+
+.section-work {
+	padding-bottom: 80px;
+
+	.inner {
+		padding: 0;
+		background: transparent;
+
+		&-desc {
+			text-align: left;
+		}
+	}
+}
+
+.section-sick {
+	padding-bottom: 80px;
+
+	.inner {
+		&-icon {
+			width: 100px;
+			height: 100px;
+			margin-bottom: 15px;
+
+			img {
+				width: 60px;
+				height: 60px;
+			}
+		}
+
+		&-title {
+			margin-bottom: 0;
+			text-align: center;
+		}
+	}
+}
+
+.section-why {
+	padding: 80px 0;
+	font-size: 17px;
+	background: url(/images/bg-why.png) no-repeat;
+	background-size: cover;
+	position: relative;
+
+	.section-title {
+		line-height: 1.4;
+	}
+
+	.list-why-text {
+		margin-bottom: 44px;
+	}
+
+	.inner-mess {
+		display: flex;
+		margin-bottom: 15px;
+		align-items: center;
+
+		&-avatar {
+			flex-shrink: 0;
+			width: 60px;
+			height: 60px;
+			border-radius: 50%;
+			overflow: hidden;
+			margin-right: 12px;
+
+			img {
+				object-fit: cover;
+				object-position: 50% 50%;
+				-o-object-position: 50% 50%;
+				width: 100%;
+				height: 100%;
+			}
+		}
+
+		&-text {
+			color: $color_main;
+			font-weight: 700;
+			font-size: 20px;
+			margin-bottom: 0;
+		}
+	}
+
+	.box-why-img {
+		display: flex;
+	}
+
+	.box-img {
+		border-radius: 15px;
+		overflow: hidden;
+
+		img {
+			object-fit: cover;
+			object-position: 50% 50%;
+			-o-object-position: 50% 50%;
+			width: 100%;
+			height: 100%;
+		}
+
+		&:nth-child(1) {
+			margin-bottom: 10px;
+			width: 100%;
+			aspect-ratio: 564/416;
+		}
+
+		&:nth-child(2) {
+			margin-right: 5px;
+		}
+
+		&:nth-child(3) {
+			margin-left: 5px;
+		}
+
+		&:nth-child(2),
+		&:nth-child(3) {
+			width: 49%;
+			aspect-ratio: 277/204;
+			flex-shrink: 0;
+		}
+	}
+
+	.box-item {
+		display: flex;
+		flex-wrap: wrap;
+
+		&:first-child {
+			margin-right: 5px;
+		}
+
+		&:last-child {
+			margin-left: 5px;
+			flex-flow: wrap-reverse;
+
+			.box-img {
+				&:nth-child(1) {
+					margin-bottom: 0;
+				}
+
+				&:nth-child(2),
+				&:nth-child(3) {
+					margin-bottom: 10px;
+				}
+			}
+		}
+	}
+
+	&::before {
+		content: '';
+		position: absolute;
+		background: url(/images/caydua.png) no-repeat;
+		background-size: cover;
+		width: 300px;
+		height: 513px;
+		left: 0;
+		top: 40%;
+		transform: translateY(-50%);
 	}
 }
