--- a/app/scss/page/_reponsive.scss
+++ b/app/scss/page/_reponsive.scss
@@ -86,14 +86,14 @@
 				&::after {
 					content: '';
 					left: -30px;
-					bottom: 10px;
+					bottom: 3px;
 
 				}
 
 				&::before {
 					content: '';
 					left: -30px;
-					bottom: 22px;
+					bottom: 15px;
 				}
 			}
 
@@ -147,6 +147,133 @@
 			bottom: 22px;
 			background: url(/images/ship-bg2-mb.png) no-repeat;
 			background-size: cover;
+		}
+	}
+
+	.section-work {
+		padding-bottom: 0;
+
+		.section-desc {
+			text-align: left !important;
+		}
+
+		.item {
+			&:not(:last-child) {
+				margin-bottom: 30px;
+			}
+		}
+	}
+
+	.section-inherit {
+		padding: 50px 0;
+
+		.section-desc {
+			text-align: left !important;
+		}
+
+		.inner {
+			display: flex;
+
+			&-icon {
+				width: 100px;
+				height: 100px;
+				flex-shrink: 0;
+				margin-bottom: 0;
+				margin-right: 17px;
+
+				img {
+					width: 60px;
+					height: 60px;
+				}
+			}
+
+			&-title {
+				text-align: left;
+			}
+
+			&-desc {
+				text-align: left;
+			}
+		}
+
+		.item {
+			&:not(:last-child) {
+				margin-bottom: 25px;
+			}
+		}
+	}
+
+	.section-why {
+		padding-bottom: 50px;
+		padding-top: 70px;
+		background: url(/images/bg-why-mb.png) no-repeat;
+		background-size: cover;
+
+		.section-title {
+			br {
+				display: none;
+			}
+		}
+
+		.inner-mess-text {
+			font-size: 17px;
+		}
+
+		.list-why-text {
+			margin-bottom: 15px;
+		}
+
+		.box-why-img {
+			flex-wrap: wrap;
+		}
+
+		.box-img {
+
+			&:nth-child(2),
+			&:nth-child(3) {
+				width: 48%;
+			}
+		}
+
+		.box-item {
+			&:first-child {
+				margin-right: 0;
+
+				.box-img {
+
+					&:nth-child(2),
+					&:nth-child(3) {
+						margin-bottom: 10px;
+					}
+				}
+			}
+
+			&:last-child {
+				margin-left: 0;
+			}
+
+		}
+
+		&::before {
+			content: '';
+			background: url(/images/caydua-mb.png) no-repeat;
+			background-size: cover;
+			width: 79px;
+			height: 199px;
+			left: auto;
+			right: 0;
+			top: 0;
+			transform: translateY(-35%);
+		}
+	}
+
+	.section-sick {
+		padding: 50px 0;
+
+		.item {
+			&:not(:nth-child(5)):not(:nth-child(6)) {
+				margin-bottom: 30px;
+			}
 		}
 	}
 }
