--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -9,4 +9,7 @@
 //page
 @import 'page/homepage';
 @import 'page/single_faq';
+@import 'page/faq';
+@import 'page/tell_stories';
+@import 'page/contact';
 @import 'page/reponsive';
