--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -12,4 +12,6 @@
 @import 'page/faq';
 @import 'page/tell_stories';
 @import 'page/contact';
+@import 'page/service';
+@import 'page/treatment';
 @import 'page/reponsive';
