--- a/app/css/style.css
+++ b/app/css/style.css
@@ -331,6 +331,18 @@ a:hover {
   font-size: 17px;
 }
 
+.section-linkmore {
+  width: max-content;
+  display: block;
+  background: #D7A444;
+  color: #fff;
+  padding: 15px 30px;
+  font-size: 15px;
+  border-radius: 150px;
+  margin-bottom: 20px;
+  font-weight: 700;
+}
+
 .section-hello {
   padding: 80px 0;
 }
@@ -343,18 +355,6 @@ a:hover {
 .section-hello .entry p {
   margin-bottom: 15px;
   font-size: 17px;
-}
-
-.section-hello .section-linkmore {
-  width: max-content;
-  display: block;
-  background: #D7A444;
-  color: #fff;
-  padding: 15px 30px;
-  font-size: 15px;
-  border-radius: 150px;
-  margin-bottom: 20px;
-  font-weight: 700;
 }
 
 .section-hello .section-link {
@@ -548,6 +548,7 @@ a:hover {
 .section-inherit .inner {
   background: #F2E9D7;
   border-radius: 16px;
+  height: 100%;
   padding: 30px 20px;
 }
 
@@ -959,6 +960,40 @@ a:hover {
 
 .section-social .box-social:not(:last-child) {
   margin-right: 30px;
+}
+
+.section-mess {
+  padding-bottom: 80px;
+  position: relative;
+}
+
+.section-mess .box-img {
+  margin-bottom: 24px;
+}
+
+.section-mess .section-linkmore {
+  margin: 0 auto;
+}
+
+.section-mess::before {
+  content: '';
+  position: absolute;
+  left: 0;
+  bottom: 0;
+  background: url(/images/ship-bg.png) no-repeat;
+  background-size: cover;
+  width: 488px;
+  height: 443px;
+}
+
+.section-mess::after {
+  content: '';
+  position: absolute;
+  right: 0;
+  top: 0;
+  background: url(/images/ship-bg2.png) no-repeat;
+  width: 488px;
+  height: 440px;
 }
 
 .form-title {
@@ -1563,6 +1598,409 @@ a:hover {
 .page-contact .section-sick .inner-icon img {
   width: 50px;
   height: 50px;
+}
+
+.page-service #breadcrumbs {
+  margin-bottom: 40px;
+}
+
+.page-service .single-title {
+  margin-bottom: 20px;
+}
+
+.page-service .page-desc {
+  margin-bottom: 30px;
+  font-size: 17px;
+}
+
+.page-service .section-mess {
+  padding-bottom: 30px;
+}
+
+.page-service .section-mess .box-img {
+  margin-bottom: 0;
+}
+
+.page-service .section-form::after {
+  content: '';
+  display: none;
+}
+
+.box-img-service {
+  margin-bottom: 80px;
+}
+
+.box-img-service .box-img-top {
+  width: 100%;
+  height: 400px;
+  border-radius: 15px;
+  overflow: hidden;
+}
+
+.box-img-service .box-img-bottom {
+  text-align: center;
+  position: relative;
+  margin: -85px auto 0 auto;
+}
+
+.section-progress {
+  background: url(/images/bg-process.png) no-repeat;
+  background-size: cover;
+  padding-top: 152px;
+  padding-bottom: 185px;
+}
+
+.section-progress .box-img {
+  text-align: center;
+  margin-bottom: 40px;
+}
+
+.list-process {
+  position: relative;
+  margin-bottom: 50px;
+}
+
+.list-process .inner-img {
+  width: 150px;
+  height: 150px;
+  margin: 0 auto 15px auto;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background: url(/images/bg-in-service.png) no-repeat;
+  background-size: cover;
+}
+
+.list-process .inner-img img {
+  width: 80px;
+  height: 80px;
+}
+
+.list-process .inner-title {
+  font-size: 17px;
+  margin-bottom: 0;
+}
+
+.list-process::before {
+  content: '';
+  position: absolute;
+  width: 100%;
+  height: 3px;
+  background: #3C2415;
+  left: 0;
+  top: 40%;
+  transform: translateY(-50%);
+}
+
+.list-process::after {
+  content: '';
+  position: absolute;
+  width: 0;
+  height: 0;
+  border-top: 10px solid transparent;
+  border-bottom: 10px solid transparent;
+  border-left: 10px solid #3C2415;
+  left: 100%;
+  top: 40%;
+  transform: translateY(-50%);
+}
+
+.list-process-content .process-title {
+  margin-bottom: 30px;
+  font-size: 24px;
+  font-weight: 700;
+  color: #3C2415;
+}
+
+.list-process-content .box-img {
+  border-radius: 15px;
+  overflow: hidden;
+  margin-bottom: 0;
+}
+
+.list-process-content .box-flex {
+  display: flex;
+  align-items: baseline;
+  justify-content: center;
+  height: 100%;
+  flex-flow: column;
+}
+
+.list-process-content .box-inner {
+  background: #fff;
+  padding: 20px;
+  border-radius: 15px;
+  border-left: 3px solid #D7A444;
+}
+
+.list-process-content .box-inner-title {
+  font-size: 17px;
+  font-weight: 700;
+  margin-bottom: 15px;
+}
+
+.list-process-content .box-inner-desc {
+  font-size: 17px;
+  margin-bottom: 0;
+}
+
+.list-process-content .box-inner:not(:last-child) {
+  margin-bottom: 24px;
+}
+
+.section-trilieu {
+  padding-top: 60px;
+  padding-bottom: 40px;
+  margin-bottom: 100px;
+}
+
+.list-trilieu {
+  margin-bottom: 30px;
+}
+
+.list-trilieu .inner {
+  position: relative;
+}
+
+.list-trilieu .inner-img {
+  width: 100%;
+  border-radius: 15px;
+  overflow: hidden;
+  aspect-ratio: 360/265;
+  margin-bottom: 0;
+  position: relative;
+}
+
+.list-trilieu .inner-img::before {
+  content: '';
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  border-radius: 15px;
+  top: 0;
+  left: 0;
+  background: linear-gradient(180deg, rgba(60, 36, 21, 0) 41.88%, #3C2415 100%);
+}
+
+.list-trilieu .inner-title {
+  color: #fff;
+  font-size: 17px;
+  font-weight: 700;
+  margin-bottom: 0;
+  position: absolute;
+  left: 0;
+  padding-left: 15px;
+  bottom: 20px;
+}
+
+.page-desc-btn {
+  background: #D7A444;
+  font-size: 17px;
+  color: #fff;
+  padding: 10px 24px;
+  border-radius: 15px;
+  width: max-content;
+  margin: 0 auto 20px auto;
+}
+
+.page-treatment .box-img-treatment {
+  text-align: center;
+  margin-bottom: 80px;
+}
+
+.page-treatment .section-form::after {
+  content: '';
+  display: none;
+}
+
+.section-entry {
+  width: 70%;
+  margin: 0 auto 40px auto;
+}
+
+.list-post-treatment {
+  margin-bottom: 160px;
+}
+
+.list-post-treatment .post-thumbnail {
+  aspect-ratio: 360/256;
+}
+
+.list-post-treatment .post-title {
+  text-align: center;
+}
+
+.list-post-treatment .post-desc {
+  color: #222222;
+}
+
+.box-treatment {
+  display: flex;
+  padding: 20px;
+  border-radius: 15px;
+  background: #F1E9D7;
+}
+
+.box-treatment-img {
+  flex-shrink: 0;
+  width: 536px;
+  aspect-ratio: 536/640;
+  border-radius: 15px;
+  overflow: hidden;
+  margin-right: 30px;
+}
+
+.box-treatment-img img {
+  object-fit: cover;
+  object-position: 50% 50%;
+  -o-object-position: 50% 50%;
+  width: 100%;
+  height: 100%;
+}
+
+.box-treatment-content {
+  font-size: 17px;
+}
+
+.box-treatment-title {
+  font-size: 24px;
+  color: #222222;
+  margin-bottom: 30px;
+  font-weight: 700;
+}
+
+.box-treatment-item {
+  padding-top: 20px;
+}
+
+.box-treatment-item p:last-child {
+  margin-bottom: 0;
+}
+
+.box-treatment-item ul {
+  padding-left: 15px;
+}
+
+.box-treatment-item ul li:not(:last-child) {
+  margin-bottom: 10px;
+}
+
+.box-treatment-item ul:last-child {
+  margin-bottom: 0;
+}
+
+.box-treatment-item:not(:last-child) {
+  padding-bottom: 20px;
+  border-bottom: 1px solid #D9D9D9;
+}
+
+.list-treatment .item {
+  padding: 0 15px;
+}
+
+.list-treatment .slick-prev {
+  left: -50px;
+}
+
+.list-treatment .slick-next {
+  right: -50px;
+}
+
+.section-treatment {
+  padding-bottom: 80px;
+}
+
+.section-thank {
+  padding-bottom: 80px;
+}
+
+.section-thank .section-title span {
+  color: #D7A444;
+}
+
+.section-thank .box-why-img {
+  display: flex;
+}
+
+.section-thank .box-img {
+  border-radius: 15px;
+  overflow: hidden;
+}
+
+.section-thank .box-img img {
+  object-fit: cover;
+  object-position: 50% 50%;
+  -o-object-position: 50% 50%;
+  width: 100%;
+  height: 100%;
+}
+
+.section-thank .box-img:nth-child(1) {
+  margin-bottom: 10px;
+  width: 100%;
+  aspect-ratio: 564/416;
+}
+
+.section-thank .box-img:nth-child(2) {
+  margin-right: 5px;
+}
+
+.section-thank .box-img:nth-child(3) {
+  margin-left: 5px;
+}
+
+.section-thank .box-img:nth-child(2), .section-thank .box-img:nth-child(3) {
+  width: 49%;
+  aspect-ratio: 277/204;
+  flex-shrink: 0;
+}
+
+.section-thank .box-item {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.section-thank .box-item:first-child {
+  margin-right: 5px;
+}
+
+.section-thank .box-item:last-child {
+  margin-left: 5px;
+  flex-flow: wrap-reverse;
+}
+
+.section-thank .box-item:last-child .box-img:nth-child(1) {
+  margin-bottom: 0;
+}
+
+.section-thank .box-item:last-child .box-img:nth-child(2), .section-thank .box-item:last-child .box-img:nth-child(3) {
+  margin-bottom: 10px;
+}
+
+.section-lienhe {
+  padding-bottom: 80px;
+}
+
+.list-lienhe {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.list-lienhe .section-linkmore {
+  margin-bottom: 0;
+}
+
+.list-lienhe .section-linkmore img {
+  margin-right: 10px;
+}
+
+.list-lienhe .section-linkmore:hover {
+  color: #3C2415;
+}
+
+.list-lienhe .section-linkmore:not(:last-child) {
+  margin-right: 20px;
 }
 
 @media (max-width: 575px) {
