--- a/app/css/style.css
+++ b/app/css/style.css
@@ -2003,6 +2003,256 @@ a:hover {
   margin-right: 20px;
 }
 
+.page-treatment #breadcrumbs {
+  margin-bottom: 40px;
+}
+
+.box-img-treatment2 {
+  margin-bottom: 80px;
+  width: 100%;
+  aspect-ratio: 1140/400;
+  border-radius: 15px;
+  overflow: hidden;
+}
+
+.section-reasoning {
+  padding-bottom: 80px;
+}
+
+.section-reasoning .box-img-reasoning {
+  width: 100%;
+  aspect-ratio: 554/716;
+  margin-bottom: 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background: url(/images/bg-reasoning.png) no-repeat;
+  background-size: contain;
+}
+
+.section-reasoning .box-content-title {
+  font-size: 17px;
+  font-weight: 700;
+  margin-bottom: 25px;
+}
+
+.section-reasoning .item {
+  margin-bottom: 20px;
+}
+
+.section-reasoning .box-content-reasoning {
+  display: flex;
+  height: 100%;
+  flex-flow: column;
+  align-items: flex-start;
+  justify-content: center;
+}
+
+.section-reasoning .inner {
+  background: #F2E9D7;
+  border-radius: 15px;
+  border-left: 3px solid #D7A444;
+  padding: 15px 20px;
+  height: 100%;
+}
+
+.section-reasoning .inner-title {
+  text-align: left;
+  margin-bottom: 15px;
+  font-size: 17px;
+}
+
+.section-reasoning .inner-desc {
+  font-size: 17px;
+  margin-bottom: 0;
+  text-align: left;
+}
+
+.section-therapy {
+  padding-bottom: 80px;
+}
+
+.section-therapy .slick-prev {
+  left: -50px;
+}
+
+.section-therapy .slick-next {
+  right: -50px;
+}
+
+.section-therapy .inner-title {
+  font-size: 17px;
+}
+
+.section-principle {
+  padding-bottom: 80px;
+}
+
+.section-principle .box-principle {
+  border-radius: 15px;
+  overflow: hidden;
+  height: 100%;
+  background-color: #F1E9D7;
+}
+
+.section-principle .box-principle-title {
+  padding: 17px;
+  text-align: center;
+  background: #3C2415;
+}
+
+.section-principle .box-principle-text {
+  color: #fff;
+  font-size: 24px;
+  margin-bottom: 8px;
+}
+
+.section-principle .box-principle-note {
+  color: #D7A444;
+  font-size: 17px;
+  margin-bottom: 0;
+}
+
+.section-principle .box-principle-content {
+  padding: 30px 15px 40px 15px;
+  font-size: 17px;
+}
+
+.section-principle .box-principle-content ul {
+  padding-left: 30px;
+  margin-bottom: 0;
+}
+
+.section-principle .box-principle-content ul li:not(:last-child) {
+  margin-bottom: 10px;
+}
+
+.section-principle .item:last-child .box-principle-title {
+  background: #D7A444;
+}
+
+.section-principle .item:last-child .box-principle-note {
+  color: #fff;
+}
+
+.section-procedure {
+  padding-bottom: 80px;
+}
+
+.section-procedure .section-title {
+  margin-bottom: 40px;
+}
+
+.section-procedure .list-procedure {
+  position: relative;
+}
+
+.section-procedure .list-procedure::before {
+  content: '';
+  position: absolute;
+  width: 90%;
+  height: 3px;
+  left: 30px;
+  top: 15%;
+  transform: translateY(-50%);
+  background: #3C2415;
+}
+
+.section-procedure .list-procedure::after {
+  content: '';
+  position: absolute;
+  width: 0;
+  height: 0;
+  border-top: 10px solid transparent;
+  border-bottom: 10px solid transparent;
+  border-left: 10px solid #3C2415;
+  left: 92%;
+  top: 15%;
+  transform: translateY(-50%);
+}
+
+.section-procedure .inner-number {
+  width: 60px;
+  height: 60px;
+  background: #D7A444;
+  color: #fff;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-radius: 50%;
+  font-size: 24px;
+  text-transform: uppercase;
+  font-weight: 700;
+  margin-bottom: 20px;
+}
+
+.section-procedure .inner-title {
+  font-size: 18px;
+  text-align: left;
+  margin-bottom: 15px;
+}
+
+.section-procedure .inner-desc {
+  margin-bottom: 0;
+  font-size: 17px;
+  text-align: left;
+}
+
+.section-feeling {
+  padding-bottom: 171px;
+  padding-top: 143px;
+  margin-bottom: 60px;
+  background: url(/images/feeling-bg.png) no-repeat;
+  background-size: cover;
+  min-height: 944px;
+}
+
+.section-feeling .slick-prev {
+  left: -50px;
+}
+
+.section-feeling .slick-next {
+  right: -50px;
+}
+
+.section-feeling .inner-img {
+  position: relative;
+  overflow: visible;
+  margin-bottom: 35px;
+}
+
+.section-feeling .inner-img::before {
+  content: '';
+  position: absolute;
+  background: url(/images/quote-icon.png) no-repeat;
+  background-size: cover;
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+  overflow: hidden;
+  bottom: -20px;
+  left: 0;
+}
+
+.section-feeling .inner-desc {
+  text-align: left;
+}
+
+.section-feeling .inner-meta {
+  border-top: 1px solid #D9D9D9;
+  padding-bottom: 15px;
+  font-size: 15px;
+}
+
+.section-feeling .inner-tag {
+  background: #fff;
+  padding: 3px 9px;
+  border-radius: 5px;
+  color: #D7A444;
+  width: max-content;
+  margin-bottom: 0;
+}
+
 @media (max-width: 575px) {
   .header-top-text {
     text-align: center;
