--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -14,4 +14,5 @@
 @import 'page/contact';
 @import 'page/service';
 @import 'page/treatment';
+@import 'page/treatment2';
 @import 'page/reponsive';
