--- a/app/css/style.css
+++ b/app/css/style.css
@@ -2253,6 +2253,101 @@ a:hover {
   margin-bottom: 0;
 }
 
+.section-about-info {
+  position: relative;
+  padding-bottom: 80px;
+}
+
+.section-about-info .box-img {
+  margin-bottom: 40px;
+}
+
+.section-about-info .single-desc {
+  margin-bottom: 30px;
+}
+
+.section-about-info::before {
+  content: '';
+  position: absolute;
+  left: 0;
+  top: 30%;
+  background: url(/images/ship-bg.png) no-repeat;
+  background-size: cover;
+  width: 488px;
+  height: 443px;
+}
+
+.section-about-info::after {
+  content: '';
+  position: absolute;
+  right: 0;
+  top: 10%;
+  background: url(/images/ship-bg2.png) no-repeat;
+  width: 488px;
+  height: 440px;
+}
+
+.section-about-info .row-content .box-img {
+  width: 100%;
+  aspect-ratio: 458/338;
+  border-radius: 15px;
+  overflow: hidden;
+  margin-bottom: 0;
+}
+
+.section-about-reason {
+  padding-bottom: 80px;
+}
+
+.section-about-reason .section-title {
+  margin-bottom: 0;
+}
+
+.section-about-reason .single-desc {
+  margin-bottom: 30px;
+}
+
+.section-about-reason .single-desc span {
+  text-transform: uppercase;
+  color: #D7A444;
+  font-size: 20px;
+}
+
+.section-about-reason .entry {
+  margin-bottom: 30px;
+}
+
+.section-about-reason .box-title-img {
+  margin-bottom: 30px;
+}
+
+.section-about-reason .box-img {
+  width: 100%;
+  aspect-ratio: 849/400;
+  border-radius: 15px;
+  overflow: hidden;
+}
+
+.section-about-reason .box-img img {
+  object-fit: cover;
+  object-position: 50% 50%;
+  -o-object-position: 50% 50%;
+  width: 100%;
+  height: 100%;
+}
+
+.section-inherit-about .inner-title {
+  font-size: 17px;
+}
+
+.section-about-info2 {
+  padding-bottom: 80px;
+}
+
+.about-info-bottom {
+  margin-bottom: 40px;
+}
+
 @media (max-width: 575px) {
   .header-top-text {
     text-align: center;
