--- a/app/scss/page/_faq.scss
+++ b/app/scss/page/_faq.scss
@@ -59,6 +59,10 @@
 			margin-bottom: 0;
 		}
 
+		&-note {
+			margin-bottom: 15px;
+		}
+
 		&-action {
 			display: flex;
 			justify-content: flex-end;
