--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -5,6 +5,7 @@
 @import 'component/header';
 @import 'component/menu';
 @import 'component/footer';
+@import 'component/cta';
 
 //page
 @import 'page/homepage';
