--- a/app/scss/page/_homepage.scss
+++ b/app/scss/page/_homepage.scss
@@ -276,7 +276,8 @@
 }
 
 .section-why {
-	padding: 80px 0;
+	padding-top: 150px;
+	padding-bottom: 80px;
 	margin-bottom: 80px;
 	font-size: 17px;
 	background: url(/images/bg-why.png) no-repeat;
