--- a/app/scss/page/_reponsive.scss
+++ b/app/scss/page/_reponsive.scss
@@ -60,6 +60,10 @@
 		font-size: 30px;
 		font-weight: 400;
 		margin-bottom: 20px;
+
+		br {
+			display: none;
+		}
 	}
 
 	.section-hello {
@@ -275,6 +279,641 @@
 				margin-bottom: 30px;
 			}
 		}
+	}
+
+	.section-form {
+		padding-bottom: 50px;
+
+		.box-contact {
+			background: url(/images/bg-from-mb.png) no-repeat;
+			background-size: cover;
+			margin-bottom: 0;
+		}
+
+		.box-form-side {
+			background: transparent !important;
+		}
+
+		.form-title {
+			font-size: 30px !important;
+			text-align: center;
+		}
+
+		.box-img {
+			width: 250px;
+			height: 430px;
+			left: 50%;
+			transform: translateX(-50%);
+		}
+
+		.btn-submit {
+			margin-left: auto !important;
+			margin-right: auto !important;
+		}
+
+		.form-cta {
+			text-align: center;
+		}
+
+		.box-info-home {
+			padding: 30px 15px;
+		}
+
+		.box-logo {
+			margin-bottom: 20px;
+		}
+
+		.box-info {
+			&:last-child {
+				margin-bottom: 20px;
+			}
+		}
+
+
+		&::after {
+			content: '';
+			display: none;
+		}
+	}
+
+	.list-stories {
+		.slick-next {
+			right: 0;
+		}
+
+		.slick-prev {
+			left: 0;
+		}
+	}
+
+	.section-diary {
+		padding-bottom: 50px;
+
+		.post-side {
+			.post-title {
+				margin-bottom: 0;
+			}
+		}
+
+		&::before {
+			content: '';
+			display: none;
+		}
+	}
+
+	.section-diary2 {
+		.list-tag {
+			flex-wrap: wrap;
+
+			.tag-item {
+				margin-right: 0 !important;
+				width: 50%;
+				flex-shrink: 0;
+
+				&:not(:last-child) {
+					margin-bottom: 20px;
+				}
+			}
+		}
+
+		.item {
+			&:not(:last-child) {
+				margin-bottom: 20px !important;
+			}
+		}
+
+		.post {
+			display: flex;
+
+			&-thumbnail {
+				width: 135px;
+				aspect-ratio: 135/100;
+				flex-shrink: 0;
+				margin-right: 15px;
+				margin-bottom: 0;
+			}
+		}
+	}
+
+	.section-social {
+		background-image: url(/images/bg-social2-md.png), url(/images/bg-social.png);
+		min-height: 1638px;
+		background-position: 100% 100%, 0% -100px;
+		background-size: cover, contain;
+
+		.section-desc {
+			width: 100% !important;
+		}
+
+		.list-box-social {
+			flex-flow: column;
+		}
+
+		.box-social {
+			width: 100%;
+
+			&:not(:last-child) {
+				margin-right: 0;
+				margin-bottom: 25px;
+			}
+		}
+	}
+
+	.section-mess {
+		padding-top: 60px;
+		padding-bottom: 253px;
+
+		&::before {
+			content: '';
+			background: url(/images/sectionmes-mb.png) no-repeat;
+			width: 100%;
+			height: 208px;
+			bottom: 0;
+			left: 0;
+		}
+
+		&::after {
+			content: '';
+			display: none;
+		}
+	}
+
+	.single-title {
+		font-size: 30px;
+		margin-bottom: 15px;
+
+		br {
+			display: none;
+		}
+	}
+
+	.box-img-service {
+		margin-bottom: 0;
+
+		.box-img-top {
+			width: 100%;
+			aspect-ratio: 400/140;
+			height: auto;
+		}
+
+		.box-img-bottom {
+			margin: -50px auto 0 auto;
+		}
+	}
+
+	.page-service {
+		.section-inherit {
+			padding-bottom: 0;
+		}
+
+		.section-mess {
+			padding-top: 35px;
+
+			&::before,
+			&::after {
+				content: '';
+				display: none;
+			}
+		}
+
+		.section-form {
+			.box-img {
+				height: 430px;
+			}
+		}
+	}
+
+	.section-progress {
+		background: url(/images/bg-process-mb.png) no-repeat;
+		padding-bottom: 60px;
+		padding-top: 105px;
+
+		.item {
+			&:not(:last-child) {
+				margin-bottom: 20px;
+			}
+		}
+
+		.list-process {
+			&::before {
+				content: '';
+				width: 3px;
+				height: 100%;
+				top: 30px;
+				left: 58px;
+				transform: translateX(5px);
+			}
+
+			&::after {
+				content: '';
+				left: 60px;
+				top: 100%;
+				transform: rotate(90deg) translateX(20px);
+			}
+
+			&-content {
+				.box-img {
+					margin-bottom: 30px;
+				}
+
+				.process-title {
+					font-size: 20px;
+					margin-bottom: 25px;
+				}
+			}
+		}
+
+		.inner {
+			display: flex;
+			align-items: center;
+			margin-bottom: 0;
+
+			&-img {
+				width: 100px;
+				height: 100px;
+				margin: 0 20px 0 0;
+
+				img {
+					width: 60px;
+					height: 60px;
+				}
+			}
+		}
+	}
+
+	.section-trilieu {
+		.section-desc {
+			text-align: left !important;
+		}
+
+		.slick-next {
+			right: 0;
+		}
+
+		.slick-prev {
+			left: 0;
+		}
+	}
+
+	.page-desc-btn {
+		font-size: 15px;
+	}
+
+	.treatment-why {
+		.section-desc {
+			text-align: left !important;
+			margin-bottom: 30px;
+		}
+	}
+
+	.list-post-treatment {
+		margin-bottom: 110px;
+
+		.item {
+			&:not(:last-child) {
+				margin-bottom: 30px;
+			}
+		}
+
+		.post-desc {
+			margin-bottom: 0;
+		}
+	}
+
+	.section-entry {
+		width: 100%;
+		margin-bottom: 30px;
+	}
+
+	.section-treatment {
+		padding-bottom: 0;
+	}
+
+	.list-treatment {
+		.slick-next {
+			right: 0;
+		}
+
+		.slick-prev {
+			left: 0;
+		}
+
+		.item {
+			padding: 0;
+		}
+	}
+
+	.box-treatment {
+		display: block;
+
+		&-img {
+			width: 100%;
+			aspect-ratio: 370/273;
+			margin-right: 0;
+		}
+	}
+
+	.section-thank {
+		padding-bottom: 50px;
+
+		.box-why-img {
+			flex-wrap: wrap;
+		}
+
+		.box-img {
+
+			&:nth-child(2),
+			&:nth-child(3) {
+				width: 48%;
+			}
+		}
+
+		.box-item {
+			&:first-child {
+				margin-right: 0;
+
+				.box-img {
+
+					&:nth-child(2),
+					&:nth-child(3) {
+						margin-bottom: 10px;
+					}
+				}
+			}
+
+			&:last-child {
+				margin-left: 0;
+			}
+
+		}
+	}
+
+	.section-lienhe {
+		padding-bottom: 50px;
+	}
+
+	.list-lienhe {
+		flex-wrap: wrap;
+
+		.section-linkmore {
+			width: 48%;
+			margin-right: 0;
+			padding: 15px 20px;
+			margin-right: 0 !important;
+			text-transform: uppercase;
+
+			&:first-child {
+				margin-right: 10px !important;
+			}
+
+			&:not(:last-child) {
+				margin-bottom: 10px;
+			}
+		}
+	}
+
+	.box-img-treatment2 {
+		margin-bottom: 50px;
+	}
+
+	.section-reasoning {
+		padding-bottom: 50px;
+
+		.section-title {
+			margin-left: auto;
+			margin-right: auto;
+			margin-bottom: 15px;
+		}
+
+		.box-img-reasoning img {
+			width: 274px;
+			height: 364px;
+		}
+	}
+
+	.section-therapy {
+		padding-bottom: 50px;
+	}
+
+	.list-therapy {
+		.slick-next {
+			right: 0;
+		}
+
+		.slick-prev {
+			left: 0;
+		}
+
+	}
+
+	.list-therapy2 {
+		.slick-next {
+			right: 0;
+		}
+
+		.slick-prev {
+			left: 0;
+		}
+
+	}
+
+	.section-principle {
+		padding-bottom: 50px;
+
+		.box-principle {
+			&-title {
+				padding: 15px;
+			}
+
+			&-text {
+				font-size: 20px;
+			}
+
+			&-note {
+				font-size: 16px;
+			}
+		}
+
+		.item {
+			&:not(:last-child) {
+				margin-bottom: 25px;
+			}
+		}
+	}
+
+	.section-procedure {
+		padding-bottom: 50px;
+
+		.list-procedure {
+			.inner {
+				display: flex;
+
+				&-number {
+					flex-shrink: 0;
+					margin-bottom: 0;
+					margin-right: 20px;
+				}
+			}
+
+			.item {
+				&:not(:last-child) {
+					margin-bottom: 30px;
+				}
+			}
+
+			&::before {
+				content: '';
+				width: 3px;
+				height: 90%;
+				top: 30px;
+				transform: unset;
+				left: 42px;
+			}
+
+			&::after {
+				content: '';
+				top: auto;
+				bottom: 15px;
+				left: 29px;
+				transform: rotate(90deg) translateY(-50%);
+			}
+		}
+	}
+
+	.section-feeling {
+		padding-bottom: 0;
+		padding-top: 50px;
+		margin-bottom: 110px;
+		background: url(/images/feeling-bg-mb.png) no-repeat;
+		min-height: 730px;
+
+		.slick-next {
+			right: 0;
+		}
+
+		.slick-prev {
+			left: 0;
+		}
+	}
+
+	.contact-link {
+		&-btn {
+			padding: 15px 20px;
+
+			&:not(:last-child) {
+				margin-right: 20px;
+			}
+		}
+	}
+
+	.page-contact {
+		.box-contact {
+			background: url(/images/bg-from-mb.png) no-repeat;
+			background-size: cover;
+			margin-bottom: 0;
+
+			.box-img {
+				width: 300px;
+				height: 430px;
+				left: 50%;
+				transform: translateX(-50%);
+			}
+
+			.box-form-side {
+				background: transparent !important;
+			}
+
+			.form-title {
+				font-size: 30px !important;
+				text-align: center;
+			}
+
+			.btn-submit {
+				margin-left: auto !important;
+				margin-right: auto !important;
+			}
+
+			.form-cta {
+				text-align: center;
+			}
+		}
+	}
+
+	.section-sick {
+		.slick-next {
+			right: 0;
+		}
+
+		.slick-prev {
+			left: 0;
+		}
+	}
+
+	.section-about-info {
+		padding-bottom: 50px;
+
+		&::before,
+		&::after {
+			content: '';
+			display: none;
+		}
+	}
+
+	.section-about-reason {
+		padding-bottom: 0;
+
+	}
+
+	.section-inherit-about {
+		.page-desc-btn {
+			width: auto;
+			text-align: center;
+		}
+	}
+
+	.section-about-info2 {
+		padding-bottom: 50px;
+	}
+
+	.page-stories {
+		padding-bottom: 0;
+
+		.entry {
+			width: 100%;
+		}
+	}
+
+	.list-stories {
+		margin-bottom: 120px;
+	}
+
+	.box-file {
+		.item-file {
+			&:not(:last-child) {
+				margin-bottom: 20px;
+			}
+		}
+	}
+
+	.box-faq {
+		&-avatar {
+			width: 36px;
+			height: 36px;
+		}
+	}
+
+	.box-faq-customer {
+		.box-faq-reply {
+			padding: 44px 20px;
+			font-size: 20px;
+		}
+	}
+
+	.pagination-nav {
+		margin-bottom: 50px;
+	}
+	.box-form-side{
+		margin-bottom: 50px;
 	}
 }
 
