--- a/app/scss/page/_tell_stories.scss
+++ b/app/scss/page/_tell_stories.scss
@@ -26,6 +26,14 @@
 		position: relative;
 		margin-bottom: 10px;
 
+		img {
+			object-fit: cover;
+			object-position: 50% 50%;
+			-o-object-position: 50% 50%;
+			width: 100%;
+			height: 100%;
+		}
+
 		&::before {
 			content: '';
 			position: absolute;
